styles/main.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

html {
  overflow-x: hidden;
  width: 100vw;
}

* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

*::-moz-selection {
  background: greenyellow;
  color: black;
}

*::selection {
  background: greenyellow;
  color: black;
}

h1, .logo, .nav-link, .outline-link {
  font-family: 'Staatliches', sans-serif;
}

body {
  font-family: 'Montserrat', sans-serif;
}

p {
  font-size: 12px;
  line-height: calc(12px * 1.618);
}

label {
  font-family: 'Bungee Hairline', sans-serif;
}

input[type=text] {
  font-family: 'Bungee', sans-serif;
}

textarea {
  font-family: "Bungee", sans-serif;
  font-size: 28px;
}

.nav-link:hover, .nav-link.active {
  font-family: 'Lacquer', sans-serif;
  text-transform: capitalize;
}

a {
  text-decoration: none;
  color: inherit;
}

.logo {
  font-size: 40px;
  line-height: 50px;
}

@media screen and (min-width: 992px) {
  .logo {
    font-size: 45px;
    line-height: 57px;
  }
  .logo:hover {
    color: #5a5a5a;
  }
}

.circle-letter {
  font-size: 15px;
  text-transform: uppercase;
  font-family: 'Staatliches', sans-serif;
  color: #5a5a5a;
}

@media screen and (min-width: 768px) {
  .circle-letter {
    font-size: 20px;
  }
}

@media screen and (min-width: 992px) {
  .circle-letter {
    font-size: 30px;
  }
}

h1, .logo, .nav-link {
  color: #454545;
}

h1 {
  font-size: 61.92px;
  line-height: 100.18656px;
}

.nav-link {
  font-size: 18.54px;
  line-height: 24px;
}

@media screen and (min-width: 768px) {
  .nav-link {
    font-size: 30px;
    line-height: 37px;
  }
}

.big-link {
  cursor: pointer;
  font-family: "Staatliches", sans-serif;
  font-size: 30px;
  line-height: calc(30px * 1.618);
  color: #454545;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.big-link:hover {
  color: transparent;
  -webkit-text-stroke: 1px #5a5a5a;
}

.big-link.reverse {
  color: transparent;
  -webkit-text-stroke: 1px #5a5a5a;
}

.big-link.reverse:hover {
  color: #454545;
}

header {
  width: 100vw;
  padding: 30px 32px 0px 32px;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: auto auto;
      grid-template-columns: auto auto;
  -ms-grid-rows: auto auto;
      grid-template-rows: auto auto;
}

header .button-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

header .button-container button {
  padding: 0;
  margin: 0;
  border: none;
  background: none;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

header .button-container button.open {
  -webkit-transform: rotate(-90deg);
          transform: rotate(-90deg);
}

header nav {
  -ms-grid-row: 2;
  -ms-grid-row-span: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 2;
  grid-area: 2 / 1 / span 1 / span 2;
  width: 100%;
  height: 0px;
  padding: 34px 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  overflow: hidden;
  margin-top: -75px;
  pointer-events: none;
  opacity: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

header nav.open {
  height: unset;
  margin-top: 0;
  opacity: 1;
  pointer-events: all;
  height: unset;
}

header nav .nav-link::before {
  content: attr(data-id);
  display: block;
  font-family: 'Lacquer';
  text-transform: capitalize;
  height: 0px;
  visibility: hidden;
}

@media screen and (min-width: 768px) {
  header {
    padding: 40px 32px 0px 32px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  header .button-container {
    display: none;
  }
  header nav {
    height: unset;
    opacity: 1;
    pointer-events: all;
    width: auto;
    margin-top: 0;
    padding: 0px;
  }
  header nav .nav-link {
    margin-left: 8px;
  }
}

@media screen and (min-width: 992px) {
  header {
    padding: 55px 140px 0px 140px;
  }
  header nav .nav-link {
    margin-left: 53px;
  }
}

.loader {
  position: fixed;
  top: 50%;
  left: 32px;
  min-height: 5px;
  min-width: 4px;
  border: 0.5px solid #5a5a5a;
  z-index: 10;
}

@media screen and (min-width: 992px) {
  .loader {
    left: 140px;
  }
}

.block1, .block2 {
  background: white;
  position: fixed;
  visibility: hidden;
  display: none;
  z-index: 9;
  min-height: 50vh;
  max-height: 50vh;
  max-width: 50vw;
  min-width: 50vw;
}

.block1 {
  top: 0;
  right: 0;
}

.block2 {
  bottom: 0;
}

.load-txt {
  font-size: 140px;
  font-family: 'Staatliches', sans-serif;
  position: fixed;
}

.load-txt:first-of-type {
  right: 50%;
  top: 50%;
}
/* ... */

